--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,13 +5,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" ref="{% static 'core/styles.css' %}">
-  <script src="{% static 'core/main.js' %}" deferred></script>
+  <link rel="stylesheet" href="{% static 'core/styles.css' %}">
   <title>Juosan Interactive Playground</title>
 </head>
 <body>
-  <div class="container-80">
-    <h1>Hello world</h1>
+  <div class="container-90 main-layout">
+    <h1 style="text-align: center">Juosan Interactive Playground</h1>
+    <div id="grid-size">
+      <div>
+        <label for="m">m: </label>
+        <input type="number" id="m" name="m" min="1" max="50" value="5">
+      </div>
+      <div>
+        <label for="n">n: </label>
+        <input type="number" id="n" name="n" min="1" max="50" value="5">
+      </div>
+    </div>
+    <div id="tools">
+      <div>
+        <input type="radio" id="split" name="tool" value="split" checked>
+        <label for="split">Add Territory</label>
+      </div>
+      <div>
+        <input type="radio" id="add-constraint" name="tool" value="add-constraint">
+        <label for="add-constraint">Add Constraint Number</label>
+        <input type="number" id="constraint-number" name="tool" min="1" value="1">
+      </div>
+      <button type="button" id="undo">Undo</button>
+      <button type="button" id="redo">Redo</button>
+    </div>
+    <div style="position: relative; margin-top: 2.5rem;">
+      <div id="message">Note: Hey you!</div>
+      <div id="grid"></div>
+    </div>
   </div>
+  <script src="{% static 'core/main.js' %}"></script>
 </body>
 </html>
