--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -29,12 +29,11 @@
       <div>
         <input type="radio" id="add-constraint" name="tool" value="add-constraint">
         <label for="add-constraint">Add Constraint Number</label>
-        <input type="number" id="constraint-number" name="tool" min="1" value="1">
       </div>
       <button type="button" id="undo">Undo</button>
       <button type="button" id="reset">Reset</button>
     </div>
-    <div style="position: relative; margin-top: 2.5rem;">
+    <div style="position: relative; margin-top: 2.5rem; width: 100%; display: flex; justify-content: center;">
       <div id="message"></div>
       <div id="grid"></div>
     </div>
