--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -12,27 +12,33 @@
   <div id="fields" class="container-90 main-layout">
     <h1 style="text-align: center">Juosan Interactive Playground</h1>
     <div id="grid-size">
-      <div>
-        <label for="m">m: </label>
-        <input type="number" id="m" name="m" min="1" max="50" value="5">
+      <div style="display: flex; gap: 0.5rem; align-items: center;">
+        <label for="m">M: </label>
+        <input type="number" id="m" name="m" min="1" max="50" value="5" class="text-input">
       </div>
-      <div>
-        <label for="n">n: </label>
-        <input type="number" id="n" name="n" min="1" max="50" value="5">
+      <div style="display: flex; gap: 0.5rem; align-items: center;">
+        <label for="n">N: </label>
+        <input type="number" id="n" name="n" min="1" max="50" value="5" class="text-input">
       </div>
     </div>
     <div id="tools">
-      <div>
-        <input type="radio" id="add-territory" name="tool" value="add-territory">
-        <label for="add-territory">Add Territory</label>
-      </div>
-      <div>
-        <input type="radio" id="add-constraint" name="tool" value="add-constraint">
-        <label for="add-constraint">Add Constraint Number</label>
-      </div>
-      <button type="button" id="reset">Reset</button>
+      <ul class="add-tools">
+        <li class="add-tools-item">
+          <div class="add-tools-item-div">
+            <input type="radio" id="add-territory" name="tool" value="add-territory" class="add-tools-radio-input">
+            <label for="add-territory" class="add-tools-radio-label">Add Territory</label>
+          </div>
+        </li>
+        <li class="add-tools-item">
+          <div class="add-tools-item-div">
+            <input type="radio" id="add-constraint" name="tool" value="add-constraint" class="add-tools-radio-input">
+            <label for="add-constraint" class="add-tools-radio-label">Add Constraint Number</label>
+          </div>
+        </li>
+      </ul>
+      <button type="button" id="reset" class="btn">Reset</button>
       <div style="display: flex; align-items: center; gap: 0.75rem">
-        <button type="button" id="submit">Solve</button>
+        <button type="button" id="submit" class="btn">Solve</button>
         <div id="loader" class="loading"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
       </div>
     </div>
@@ -41,6 +47,20 @@
       <div id="grid"></div>
     </div>
   </div>
+  <button type="button" id="open-modal">open modal</button>
+  <dialog id="modal" style="padding: 0;" onclick="event.target == this && this.close()">
+    <div style="margin: 0; padding: 1rem">
+      <h1>Yoo</h1>
+      <button type="button" id="close-modal">close modal</button>
+    </div>
+  </dialog>
   <script src="{% static 'core/main.js' %}"></script>
+  <script>
+    const openModal = document.getElementById("open-modal");
+    const closeModal = document.getElementById("close-modal");
+
+    openModal.addEventListener("click", () => modal.showModal());
+    closeModal.addEventListener("click", () => modal.close());
+  </script>
 </body>
 </html>
