--- a/core/static/core/styles.css
+++ b/core/static/core/styles.css
@@ -1,4 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+
+:root {
+  /* taken from tailwind */
+  --white: #fff;
+  --gray-50: #f8fafc; /* slate */
+  --gray-100: #f1f5f9;
+  --gray-200: #e2e8f0;
+  --gray-300: #cbd5e1;
+  --gray-600: #475569;
+  --gray-800: #1e293b;
+  --gray-900: #0f172a;
+  --blue-300: #93c5fd;
+  --blue-500: #3b82f6;
+  --blue-600: #2563eb;
+  --red-500: #e11d48;
+}
 
 /* ====  CSS reset defaults ==== */
 *, *::before, *::after {
@@ -7,6 +23,11 @@
 
 * {
   margin: 0;
+  color: var(--gray-900);
+}
+
+dialog {
+  margin: auto !important;
 }
 
 html, body {
@@ -15,7 +36,7 @@ html, body {
 
 body {
   line-height: 1.5;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -48,7 +69,7 @@ p, h1, h2, h3, h4, h5, h6 {
   align-items: center;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  gap: 1.3rem;
+  gap: 1rem;
 }
 
 /* ======== tool widgets ======== */
@@ -56,6 +77,7 @@ p, h1, h2, h3, h4, h5, h6 {
 #grid-size, #tools {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
@@ -72,17 +94,126 @@ p, h1, h2, h3, h4, h5, h6 {
   transform: translate(-50%, 0);
 }
 
+.text-input {
+  display: block; 
+  padding: 0.625rem; 
+  background-color: var(--gray-50); 
+  color: var(--gray-900); 
+  font-size: 0.875rem;
+  line-height: 1.25rem; 
+  width: 100%; 
+  border-style: solid;
+  border-radius: 0.5rem; 
+  border-width: 1px; 
+  border-color: var(--gray-300); 
+}
+
+.text-input:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  border-color: var(--blue-500);
+}
+
+.btn {
+  cursor: pointer;
+  padding: 0.625rem 1.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem; 
+  font-weight: 500; 
+  border-radius: 0.5rem; 
+  border: none;
+}
+
+#submit {
+  background-color: var(--gray-800); 
+  color: var(--white); 
+}
+
+#submit:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  box-shadow: 0 0 0 4px rgba(203,213,225,.5);
+}
+
+#submit:hover {
+  background-color: var(--gray-900); 
+}
+
+#reset {
+  background-color: var(--white);
+  color: var(--gray-900);
+  border: 1px solid var(--gray-300);
+}
+
+#reset:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  box-shadow: 0 0 0 4px rgba(226,232,240,.5);
+}
+
+#reset:hover {
+  background-color: var(--gray-100);
+}
+
+.add-tools {
+  display: flex;
+  align-items: center;
+  width: max-content;
+  font-weight: 500;
+  background-color: var(--white);
+  border: solid;
+  border-width: 1px;
+  border-color: var(--gray-200);
+  border-radius: 0.5rem;
+  list-style: none;
+  padding: 0;
+}
+
+.add-tools-item {
+  width: 100%;
+  border-right: solid;
+  border-color: var(--gray-200);
+  border-right-width: 1px;
+}
+
+.add-tools-item-div {
+  display: flex;
+  align-items: center;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.add-tools-radio-input {
+  background-color: var(--gray-100); 
+  color: var(--blue-600);
+  width: 1rem; 
+  height: 1rem; 
+  border-color: #D1D5DB; 
+}
+
+.add-tools-radio-label {
+  white-space: nowrap;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem; 
+  margin-left: 0.5rem; 
+  color: var(--gray-900); 
+  font-size: 0.875rem;
+  line-height: 1.25rem; 
+  font-weight: 500; 
+  width: 100%; 
+}
+
 /* ============================== */
 
 #grid {
   width: max(300px, 20%);
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  border: solid 2px black;
+  border: solid 2px var(--gray-900);
 }
 
 .cell {
-  border: dashed 1px gray;
+  border: dashed 1px var(--gray-200);
   aspect-ratio: 1 / 1;
   cursor: pointer;
   padding: 5%;
@@ -90,10 +221,10 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 .cell > p { height: 100%; }
-.cell > p:focus { outline: 2px dashed lightblue; }
+.cell > p:focus { outline: 2px dashed var(--blue-300); }
 
 .cell:hover {
-  background-color: whitesmoke;
+  background-color: var(--gray-100);
 }
 
 .cell-dash::before {
@@ -103,7 +234,7 @@ p, h1, h2, h3, h4, h5, h6 {
   position: absolute;
   margin: auto;
   inset: 0;
-  background-color: rgb(47,163,200);
+  background-color: var(--blue-600);
 }
 
 .cell-bar::before {
@@ -113,11 +244,11 @@ p, h1, h2, h3, h4, h5, h6 {
   position: absolute;
   margin: auto;
   inset: 0;
-  background-color: rgb(200,52,47);
+  background-color: var(--red-500);
 }
 
 .cell-highlighted {
-  background-color: whitesmoke;
+  background-color: var(--gray-100);
 }
 
 /* ========== utils ============= */
