--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -47,11 +47,56 @@
       <div id="grid"></div>
     </div>
   </div>
-  <button type="button" id="open-modal">open modal</button>
+  <button type="button" id="open-modal">
+    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"></path><path d="M235 339h42v42h-42zM276.8 318h-41.6c0-67 62.4-62.2 62.4-103.8 0-22.9-18.7-41.7-41.6-41.7S214.4 192 214.4 214h-41.6c0-46 37.2-83 83.2-83s83.2 37.1 83.2 83.1c0 52-62.4 57.9-62.4 103.9z"></path></svg>
+    About
+  </button>
   <dialog id="modal" style="padding: 0;" onclick="event.target == this && this.close()">
     <div style="margin: 0; padding: 1rem">
-      <h1>Yoo</h1>
-      <button type="button" id="close-modal">close modal</button>
+      <div class="modal-header">
+        <h3>
+          About Juosan Puzzles
+        </h3>
+        <button type="button" id="close-modal">
+          <svg aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+        </button>
+      </div>
+      <div class="modal-content">
+        <p>
+          Juosan puzzles, created by Nikoli (the mastermind behind Sudoku), offer a captivating pencil-and-paper challenge. Recently proven to be NP-complete, these puzzles become progressively harder as the size increases, even for computers.
+          The puzzle is played on an M x N grid with multiple rectangular territories, the goal is to fill each cell with a <button class="mini-dash"></button> or <button class="mini-bar"></button> symbol, following these rules:
+        </p>
+        <ul>
+          <li>If a territory contains a number, the number of <button class="mini-dash"></button> or <button class="mini-bar"></button> symbols within it must be equal to that number;</li>
+          <li>The <button class="mini-dash"></button> symbol cannot extend vertically for more than two cells.</li>
+          <li>The <button class="mini-bar"></button> symbol cannot extend horizontally for more than two cells;</li>
+        </ul>
+        <p>
+          Our solver app utilizes a SAT-based approach to crack Juosan puzzles.
+          The puzzle constraints are converted into Boolean formulas, which are then fed into a SAT solver.
+          SAT solvers have been extensively optimized over the past 50 years and are widely used for solving Boolean formulas (which is also an NP-complete problem).
+          In fact, competitions have been held to continuously enhance the performance of SAT solvers.
+        </p>
+
+        <p>
+          For more detailed information about Juosan puzzles, please refer to [1] and [2].
+        </p>
+        <div class="modal-header">
+          <h3>
+            How to use
+          </h3>
+        </div>
+        <div class="modal-content">
+          <p>You can adjust the puzzle size with the M and N fields at the top.</p>
+          <p>Then, some tools are provided, namely:</p>
+          <ul>
+            <li><strong>Add territory</strong>: Click opposite corners to draw a territory.</li>
+            <li><strong>Add constraint number to a territory</strong>: Click a territory and enter a number.</li>
+            <li><strong>Reset</strong>: to clear and reset the grid.</li>
+            <li><strong>Solve</strong>: to solve the puzzle that you have drawn.</li>
+          </ul>
+        </div>
+      </p>
     </div>
   </dialog>
   <script src="{% static 'core/main.js' %}"></script>
