Fix a bug + adjust input styling

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="modal-content">
         <p>
-          Juosan puzzles, created by Nikoli (the mastermind behind Sudoku), offer a captivating pencil-and-paper challenge. Recently proven to be NP-complete, these puzzles become progressively harder as the size increases, even for computers.
+          Juosan puzzles, created by Nikoli (the mastermind behind Sudoku), offer a captivating pencil-and-paper challenge. Recently proven to be NP-complete, these puzzles become much harder as the size increases, even for computers.
           The puzzle is played on an M x N grid with multiple rectangular territories, the goal is to fill each cell with a <button class="mini-dash"></button> or <button class="mini-bar"></button> symbol, following these rules:
         </p>
         <ul>
