Add further readings in About modal

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -79,7 +79,7 @@
         </p>
 
         <p>
-          For more detailed information about Juosan puzzles, please refer to [1] and [2].
+          For more detailed information about Juosan puzzles, please refer to <a href="https://www.nikoli.co.jp/en/puzzles/juosan/" target="_blank">[1]</a> and <a href="https://www.janko.at/Raetsel/Juosan/index.htm" target="_blank">[2]</a>.
         </p>
         <div class="modal-header">
           <h3>
