Add solver logic for tractable puzzles

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -90,7 +90,7 @@
           <p>You can adjust the puzzle size with the M and N fields at the top.</p>
           <p>Then, some tools are provided, namely:</p>
           <ul>
-            <li><strong>Add territory</strong>: Click opposite corners to draw a territory.</li>
+            <li><strong>Add territory</strong>: Click two opposite corners to draw a territory.</li>
             <li><strong>Add constraint number to a territory</strong>: Click a territory and enter a number.</li>
             <li><strong>Reset</strong>: to clear and reset the grid.</li>
             <li><strong>Solve</strong>: to solve the puzzle that you have drawn.</li>
