--- a/core/static/core/styles.css
+++ b/core/static/core/styles.css
@@ -69,7 +69,14 @@ p, h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   align-items: center;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
   gap: 1rem;
 }
 
@@ -123,36 +130,37 @@ p, h1, h2, h3, h4, h5, h6 {
   font-weight: 500; 
   border-radius: 0.5rem; 
   border: none;
+  white-space: nowrap;
 }
 
-#submit {
+.btn-fill {
   background-color: var(--gray-800); 
   color: var(--white); 
 }
 
-#submit:focus {
+.btn-fill:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
   box-shadow: 0 0 0 4px rgba(203,213,225,.5);
 }
 
-#submit:hover {
+.btn-fill:hover {
   background-color: var(--gray-900); 
 }
 
-#reset {
+.btn-outline {
   background-color: var(--white);
   color: var(--gray-900);
   border: 1px solid var(--gray-300);
 }
 
-#reset:focus {
+.btn-outline:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
   box-shadow: 0 0 0 4px rgba(226,232,240,.5);
 }
 
-#reset:hover {
+.btn-outline:hover {
   background-color: var(--gray-100);
 }
 
