--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -19,6 +19,10 @@
         <button id="draw" class="btn btn-outline">Draw Your Puzzle</button>
         <button id="solve-yourself" class="btn btn-fill">Solve Yourself</button>
         <div style="display: flex; align-items: center; gap: 0.75rem">
+          <button type="button" id="validate" class="btn btn-fill" style="display: none">Submit</button>
+          <div id="loader-validate" class="loading"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+        </div>
+        <div style="display: flex; align-items: center; gap: 0.75rem">
           <button type="button" id="submit" class="btn btn-fill">Autocomplete</button>
           <div id="loader" class="loading"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         </div>
