--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'core/styles.css' %}">
+  <link rel="icon" href="{% static 'core/favicon.ico' %}" type="image/x-icon" />
   <title>Juosan Interactive Playground</title>
 </head>
 <body>
