--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -13,8 +13,8 @@
   <div id="fields" class="container-90 main-layout">
     <h1 style="text-align: center">Juosan Interactive Playground</h1>
     <div id="startup" class="header-container">
-      <div style="display: flex; gap: 1rem; justify-content: center;">
-        <select id="example-instances" name="example-instances" class="text-input" onfocus="this.selectedIndex = -1;">
+      <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+        <select id="example-instances" name="example-instances" class="select-input" onfocus="this.selectedIndex = -1;">
           <option value="">Choose a puzzle level</option>
         </select>
         <button id="draw" class="btn btn-outline">Draw Your Puzzle</button>
